--- a/index.html
+++ b/index.html
@@ -104,13 +104,25 @@
   </section>
 
   <!-- Tips Section -->
-  <section id="tips" class="tips">
-    <h2>Tips for Cramps & PMS</h2>
-    <div class="tip">
-      <h3>Stay Hydrated</h3>
-      <p>Drink plenty of water to reduce bloating.</p>
+<!-- Replace the existing tips section in index.html with this: -->
+<section id="tips" class="tips">
+  <h2>Tips for Cramps & PMS</h2>
+  <div class="faq-container">
+    <div class="faq-category">
+      <h3>For Cramps</h3>
+      <div class="faq-list" id="crampsFAQ">
+        <!-- FAQ items will be added by JavaScript -->
+      </div>
     </div>
-  </section>
+    
+    <div class="faq-category">
+      <h3>For PMS (Premenstrual Syndrome)</h3>
+      <div class="faq-list" id="pmsFAQ">
+        <!-- FAQ items will be added by JavaScript -->
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Community Section -->
   <section id="community" class="community">
