--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#games">Mini-Games</a></li>
         <li><a href="#tips">Tips</a></li>
         <li><a href="#community">Community</a></li>
-        <li><a href="#signup" class="btn">Sign Up</a></li>
+        <li><a href="#" id="authBtn" class="btn">Sign Up / Log In</a></li>
       </ul>
     </nav>
   </header>
@@ -129,24 +129,27 @@
     <button id="joinCommunity">Join the Community</button>
   </section>
 
-  <!-- Authentication Section -->
-  <section id="signup" class="auth-section">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
-      <input type="email" id="signupEmail" placeholder="Email" required />
-      <input type="password" id="signupPassword" placeholder="Password" required />
-      <button type="submit" class="btn">Sign Up</button>
-    </form>
+  <!-- Authentication Modal -->
+  <div id="authModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <h2>Sign Up</h2>
+      <form id="signupForm">
+        <input type="email" id="signupEmail" placeholder="Email" required />
+        <input type="password" id="signupPassword" placeholder="Password" required />
+        <button type="submit" class="btn">Sign Up</button>
+      </form>
 
-    <h2>Log In</h2>
-    <form id="loginForm">
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
-      <button type="submit" class="btn">Log In</button>
-    </form>
+      <h2>Log In</h2>
+      <form id="loginForm">
+        <input type="email" id="loginEmail" placeholder="Email" required />
+        <input type="password" id="loginPassword" placeholder="Password" required />
+        <button type="submit" class="btn">Log In</button>
+      </form>
 
-    <button id="logoutBtn" class="btn" style="display: none;">Log Out</button>
-  </section>
+      <button id="logoutBtn" class="btn" style="display: none;">Log Out</button>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer>
