--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <li><a href="#dashboard">Dashboard</a></li>
         <li><a href="#games">Mini-Games</a></li>
         <li><a href="#tips">Tips</a></li>
-        <li><a href="#community">Community</a></li>
-        <li><a href="#signup" class="btn">Sign Up</a></li>
+        <li><a href="#" id="authBtn" class="btn">Sign Up / Log In</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- hero section -->
+  <!-- Hero Section -->
   <section class="hero">
     <video id="heroVideo" autoplay muted loop playsinline>
       <source src="./videos/girl_video.mp4" type="video/mp4">
@@ -48,8 +47,6 @@
       </div>
     </div>
     <div class="cycle-tracker">
-      <h3>Cycle Tracker</h3>
-      <p>Log your symptoms and track your cycle.</p>
       <button id="logSymptoms" class="btn">Log Symptoms</button>
     </div>
   </section>
@@ -106,24 +103,49 @@
   <!-- Tips Section -->
   <section id="tips" class="tips">
     <h2>Tips for Cramps & PMS</h2>
-    <div class="tip">
-      <h3>Stay Hydrated</h3>
-      <p>Drink plenty of water to reduce bloating.</p>
+    <div class="faq-container">
+      <div class="faq-category">
+        <h3>For Cramps</h3>
+        <div class="faq-list" id="crampsFAQ">
+          <!-- FAQ items will be added by JavaScript -->
+        </div>
+      </div>
+      <div class="faq-category">
+        <h3>For PMS (Premenstrual Syndrome)</h3>
+        <div class="faq-list" id="pmsFAQ">
+          <!-- FAQ items will be added by JavaScript -->
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Community Section -->
-  <section id="community" class="community">
-    <h2>Community</h2>
-    <p>Connect with others and share your experiences.</p>
-    <button id="joinCommunity">Join the Community</button>
-  </section>
+  <!-- Authentication Modal -->
+  <div id="authModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <h2>Sign Up</h2>
+      <form id="signupForm">
+        <input type="email" id="signupEmail" placeholder="Email" required />
+        <input type="password" id="signupPassword" placeholder="Password" required />
+        <button type="submit" class="btn">Sign Up</button>
+      </form>
+
+      <h2>Log In</h2>
+      <form id="loginForm">
+        <input type="email" id="loginEmail" placeholder="Email" required />
+        <input type="password" id="loginPassword" placeholder="Password" required />
+        <button type="submit" class="btn">Log In</button>
+      </form>
+
+      <button id="logoutBtn" class="btn" style="display: none;">Log Out</button>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2023 CycleEase. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
