--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <li><a href="#dashboard">Dashboard</a></li>
         <li><a href="#games">Mini-Games</a></li>
         <li><a href="#tips">Tips</a></li>
+        <li><a href="#community">Community</a></li>
         <li><a href="#" id="authBtn" class="btn">Sign Up / Log In</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <!-- Hero Section -->
   <section class="hero">
     <video id="heroVideo" autoplay muted loop playsinline>
@@ -48,7 +48,12 @@
       </div>
     </div>
     <div class="cycle-tracker">
-      <button id="logSymptoms" class="btn">Log Symptoms</button>
+      <h3></h3>
+      <p></p>
+      <div class="cycle-tracker">
+        <h3></h3>
+        <p></p>
+        <button id="logSymptoms" class="btn">Log Symptoms</button>
     </div>
   </section>
 
@@ -117,20 +122,14 @@
           <!-- FAQ items will be added by JavaScript -->
         </div>
       </div>
-    <div class="faq-container">
-      <div class="faq-category">
-        <h3>For Cramps</h3>
-        <div class="faq-list" id="crampsFAQ">
-          <!-- FAQ items will be added by JavaScript -->
-        </div>
-      </div>
-      <div class="faq-category">
-        <h3>For PMS (Premenstrual Syndrome)</h3>
-        <div class="faq-list" id="pmsFAQ">
-          <!-- FAQ items will be added by JavaScript -->
-        </div>
-      </div>
     </div>
+  </section>
+
+  <!-- Community Section -->
+  <section id="community" class="community">
+    <h2>Community</h2>
+    <p>Connect with others and share your experiences.</p>
+    <button id="joinCommunity">Join the Community</button>
   </section>
 
   <!-- Authentication Modal -->
@@ -160,7 +159,6 @@
     <p>&copy; 2023 CycleEase. All rights reserved.</p>
   </footer>
 
-  <script type="module" src="script.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 </html>
